Importation de toutes les routes

--- a/app/views/array.ejs
+++ b/app/views/array.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header.ejs') %>
 
-<p>page d'un message !</p>
+<p>page d'un tableau ! </p>
 
 <%- include('./partials/footer.ejs') %>
