--- a/app/views/arrays.ejs
+++ b/app/views/arrays.ejs
@@ -1,5 +1,6 @@
 <%- include('./partials/header.ejs') %>
 
-<p>page d'un message !</p>
+<p>Page des tableaux !!</p>
+
 
 <%- include('./partials/footer.ejs') %>
