--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -1,5 +1,20 @@
 <%- include('./partials/header.ejs') %>
 
-<p>page d'accueil !</p>
+<article>
+    <h2>Bienvenue dans mon expo !</h2>
+
+    <p>Bienvenue sur mon espace artistique ! Je m'appelle Patricia, et ma passion pour la peinture a été transmise par mon père. Mon art s'exprime à travers une variété de toiles, où je suis capable de m'ajuster à différents styles artistiques.
+
+        Que vous souhaitiez un portrait saisissant, un paysage envoûtant ou une toile captivante sur un thème spécifique, je suis là pour donner vie à vos idées. Bien que j'apprécie travailler avec un modèle, je suis également en mesure de créer des œuvres sur mesure, adaptées à vos besoins et à votre vision artistique.
+        
+        Offrir ou recevoir une toile personnalisée est un geste unique et significatif. Si vous recherchez le cadeau parfait ou souhaitez simplement embellir votre espace avec une œuvre exclusive, n'hésitez pas à <a href="/contact">me contacter</a>. Ensemble, nous pouvons donner vie à vos inspirations artistiques.
+    </p>
+
+</article>
+
+<div class="div__img__home">
+    <img class="img__expo" src="https://img.freepik.com/photos-gratuite/abstrait-colore-splash-3d-fond-generatif-fond-ai_60438-2509.jpg?size=626&ext=jpg" alt="peinture personnalisée">
+    <img class="img__expo" src="https://img.freepik.com/photos-premium/peinture-deux-femmes-dans-champ-fleurs-parapluie-ai-generatif_958192-1727.jpg?size=626&ext=jpg" alt="peinture personnalisée">
+</div>
 
 <%- include('./partials/footer.ejs') %>
