Tous les tableaux ajouté + un tableau

--- a/app/views/array.ejs
+++ b/app/views/array.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header.ejs') %>
 
-<p>page d'un tableau ! </p>
+<img class="oneArray" src="<%= oneArray.url_img %>" alt="toile personalisée">
 
 <%- include('./partials/footer.ejs') %>
