--- a/app/views/arrays.ejs
+++ b/app/views/arrays.ejs
@@ -8,7 +8,7 @@
             <% } else { %>
                 <article class="img-right">
                     <% } %>
-                    <img src="<%= allArrays[a].url_img %>" alt="toile personalisée">
+                    <img class="allArray" src="<%= allArrays[a].url_img %>" alt="toile personalisée">
                     <p><%= allArrays[a].description %></p>
                 </article>
                 
