--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -2,6 +2,21 @@
 <footer>
     Tout droit réservé à l'artiste
 </footer>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                const targetId = this.getAttribute('href');
+                document.querySelector(targetId).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    });
+</script>
 </body>
 
 </html>
