--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -5,6 +5,7 @@ body {
     background-color: rgba(141, 10, 10, 0.953);
     color: #ffffff;
     margin: 0% 12% 0% 12%;
+    height: 100vh;
 }
 
 h1 {
@@ -22,17 +23,24 @@ a {
 
 
 .navBar {
-    display: flex;
-    justify-content:space-around;
-    border: solid 2px color #6a0a0ad4;
-    border-radius: 2em ;
-    background-color: #6a0a0ad4;
-    margin: 1% 20% 5% 20%;
-    padding: 1%;
-    box-shadow: 10px 5px 5px rgb(12, 1, 1);
-    
+  display: flex;
+  justify-content:space-around;
+  flex-direction: column;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 5%;
+  margin: 2%;
+  gap: 10px;
+
 }
 
+.navPosition {
+  position: fixed;
+  top: 10px;
+  left: 20px;
+  
+}
 
 .btn-menu {
     --clr-font-main: hsla(0 0% 20% / 100);
@@ -95,5 +103,6 @@ a {
   box-shadow: 2px 2px 7px 0 rgb(0, 0, 0, 0.2);
   }
   
+ 
 
 
