--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -89,7 +89,7 @@ a {
     border-radius: 2em ;
     background-color: #6a0a0ad4;
     padding: 1%;
-    margin: 2%;
+    margin: 3%;
     box-shadow: 10px 5px 5px rgb(12, 1, 1);
     font-family: 'ephesis', serif;
   }
@@ -102,6 +102,19 @@ a {
   margin: 5%;
   box-shadow: 2px 2px 7px 0 rgb(0, 0, 0, 0.2);
   }
+
+  form {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .form-group{
+    margin: 0.5%;
+  }
+
+  
+  
+  
   
  
 
