--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -16,7 +16,7 @@
                 Offrir ou recevoir une toile personnalisée est un geste unique et significatif. Si vous recherchez le
                 cadeau
                 parfait ou souhaitez simplement embellir votre espace avec une œuvre exclusive, n'hésitez pas à <a
-                    href="/contact">me contacter</a>. Ensemble, nous pouvons donner vie à vos inspirations artistiques.
+                    href="#contact">me contacter</a>. Ensemble, nous pouvons donner vie à vos inspirations artistiques.
             </p>
 
         </article>
@@ -29,21 +29,27 @@
     </div>
 
 
-    <% for( let a=0; a < allArrays.length; a++ ) { %>
-
-
-        <% if(a % 2===0) { %>
-            <article id="tableaux" class="img-Left">
-                <% } else { %>
-                    <article class="img-right">
-                        <% } %>
-                            <img class="allArray" src="<%= allArrays[a].url_img %>" alt="toile personalisée">
-                            <p>
-                                <%= allArrays[a].description %>
-                            </p>
-                    </article>
-
-                    <% } %>
+    <% for (let a = 0; a < allArrays.length; a++) { %>
+        <% if (a % 2 === 0) { %>
+          <article id="tableaux" class="img-left">
+            <div class="littleArray">
+              <img class="allArray" src="<%= allArrays[a].url_img %>" alt="toile personalisée">
+            </div>
+            <div class="littleArray">
+              <p><%= allArrays[a].description %></p>
+            </div>
+          </article>
+        <% } else { %>
+          <article class="img-right">
+            <div class="littleArray">
+              <img class="allArray" src="<%= allArrays[a].url_img %>" alt="toile personalisée">
+            </div>
+            <div class="littleArray">
+              <p><%= allArrays[a].description %></p>
+            </div>
+          </article>
+        <% } %>
+      <% } %>
 
 
                     <article>
@@ -63,7 +69,9 @@
                                 <div class="form-group">
                                 <textarea name="message" id="message" cols="100" rows="20" placeholder="Si vous préférez être rappeler. Merci de me laisser votre numéro de téléphone dans votre message"></textarea>
                                  </div>
+                                 <div>
                                 <button id="button">Envoyez</button>
+                            </div>
                             </form>
                         </div>
                     </article>
