--- a/app/views/array.ejs
+++ b/app/views/array.ejs
@@ -1,5 +1,44 @@
-<%- include('./partials/header.ejs') %>
+<!DOCTYPE html>
+<html lang="fr">
 
-<img class="oneArray" src="<%= oneArray.url_img %>" alt="toile personalisée">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Peintures</title>
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ephesis&family=Skranji:wght@400;700&display=swap"
+        rel="stylesheet">
 
-<%- include('./partials/footer.ejs') %>
+
+
+</head>
+
+<body>
+    <header>
+        <div class="navPosition">
+            <nav>
+                <ul class="navBar">
+                    <a href="/#accueil"><button class="btn-menu">Accueil</button></a>
+                    <a href="/#tableaux"><button class="btn-menu">Tableaux</button></a>
+                    <a href="/#contact"><button class="btn-menu">Contactez-moi</button></a>
+                </ul>
+            </nav>
+        </div>
+        <h1 class="title">Les toiles de Patricia</h1>
+    </header>
+    <main>
+
+        <img class="oneArray" src="<%= oneArray.url_img %>" alt="toile personalisée">
+
+    </main>
+    <footer>
+        Tout droit réservé à l'artiste
+    </footer>
+
+</body>
+
+</html>
