Ajout de fichier test pour les messages et petite modif dans la page home

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -3,7 +3,7 @@
         <article id="accueil">
             <h2>Bienvenue dans mon expo !</h2>
 
-            <p>Bienvenue sur mon espace artistique ! Je m'appelle Patricia, et ma passion pour la peinture a été
+            <p>Vous êtes sur mon espace artistique ! Je m'appelle Patricia, et ma passion pour la peinture a été
                 transmise
                 par mon père. Mon art s'exprime à travers une variété de toiles, où je suis capable de m'ajuster à
                 différents styles artistiques.
