--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -50,17 +50,14 @@
           </article>
         <% } %>
       <% } %>
-
-
                     <article>
                         <div class="form-container" id="contact">
-                            <form class="form" action="/message.ejs" method="post">
+                            <form class="form" action="/robert" method="post">
                                 <h3>Contactez moi</h3>
                                 <div class="form-group">
                                 <input type="text" id="lastname" name="lastname" placeholder="Votre Nom" >
                                 </div>
                                 <div class="form-group">
-
                                 <input type="text" id="firstname" name="firstname" required placeholder="Votre Prénom*">
                                 </div>
                                 <div class="form-group">
