--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -192,3 +192,33 @@ width: 100%;
 height: 100;
 object-fit: cover;
 }
+
+.restricted-paragraph {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.messages-for-artist {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.7em;
+  padding: 1%;
+}
+
+.message-for-artist {
+  margin: 0.5%;
+  display: flex;
+}
+
+.message-button {
+align-self: flex-end;
+}
+
+.message-for-artist input {
+  margin-right: 2%;
+}
+
+.message-for-artist {
+display: flex;
+}
+
