--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -9,6 +9,7 @@ body {
 }
 
 h1 {
+  padding-top: 2%;
   font-size: 4rem;
   font-weight: bolder;
   text-shadow: 5px 1px 2px rgb(16, 3, 5);
@@ -193,32 +194,50 @@ height: 100;
 object-fit: cover;
 }
 
+
+.messages-for-artist {
+  display: flex;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 0.7em;
+  margin: 2%;
+}
+
+.message-for-artist {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.message-left {
+  width: 70%;
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 1%;
+}
+
+.message-left input {
+  margin-right: 4%;
+}
+
+.message-left p {
+  margin-right: 2%;
+}
+
+.message-right a {
+  text-decoration: none;
+  transition: transform 0.3s ease; /* Ajoute une transition pour une animation fluide */
+}
+
+.message-right:hover {
+  transform: scale(1.2); /*zoome le texte */
+}
+
+
 .restricted-paragraph {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
 }
-
-.messages-for-artist {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.7em;
-  padding: 1%;
-}
-
-.message-for-artist {
-  margin: 0.5%;
-  display: flex;
-}
-
-.message-button {
-align-self: flex-end;
-}
-
-.message-for-artist input {
-  margin-right: 2%;
-}
-
-.message-for-artist {
-display: flex;
-}
-
