--- a/app/views/adminPage.ejs
+++ b/app/views/adminPage.ejs
@@ -9,58 +9,64 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ephesis&family=Skranji:wght@400;700&display=swap"
         rel="stylesheet">
-        <script src="../../utils.js"></script>
+    <script src="../../utils.js"></script>
 
 
 
 </head>
 
 <body>
-    <header>   
+    <header>
         <h1 class="title">Les toiles de Patricia</h1>
         <div class="menu-admin">
-            <nav> <ul>
-                <a href="/"><button class="btn-admin">Accueil</button></a>
-                <button class="btn-admin">Tous les messages</button>
-                <button class="btn-admin">Tous supprimer</button>
-            </ul></nav>
+            <nav>
+                <ul>
+                    <a href="/"><button class="btn-admin">Accueil</button></a>
+                    <button class="btn-admin">Tous les messages</button>
+                    <button class="btn-admin">Tous supprimer</button>
+                </ul>
+            </nav>
         </div>
     </header>
     <main>
 
 
-<article>
-    <div class="messages-for-artist">
-        <% messagesObject.entries.forEach(message => { %>
-            <div class="message-for-artist">
-                <input type="checkbox">
-                <p><%= message.lastname %>:</p>
-            <a href="#">
-                <p class="restricted-paragraph">
-                    <%= message.message  %>
-                  </p>
-            </a>
-              <div class="message-button">
-                  <a href="#">
-                  
-                      <p class="delete-button">supprimer</p>
-                  </a>
-              </div>
+        <article>
+            <div class="messages-for-artist">
+                <% messagesObject.entries.forEach(message=> { %>
+                    <div class="message-for-artist">
+                        <div class="message-left">
+                            <input type="checkbox">
+                            <p>
+                                <%= message.lastname %>:
+                            </p>
+                            <a href="#">
+                                <p class="restricted-paragraph">
+                                    <%= message.message %>
+                                </p>
+                            </a>
+                        </div>
+                        <div class="message-right">
+                            <a href="#">
+
+                                <p class="delete-button">supprimer</p>
+                            </a>
+                        </div>
+                    </div>
+
+                    <% }) %>
             </div>
-    
-        <% }) %>
-    </div>
-</article>
+        </article>
 
-<script>
-    const paragraphs = document.querySelectorAll('.restricted-paragraph');
-    const maxCharacters = 50;
+        <script>
+            const paragraphs = document.querySelectorAll('.restricted-paragraph');
+            const maxCharacters = 100;
 
-    paragraphs.forEach(paragraph => {
-      if (paragraph.textContent.length > maxCharacters) {
-        paragraph.textContent = paragraph.textContent.substring(0, maxCharacters) + '...';
-      }
-    });
-  </script>
+            paragraphs.forEach(paragraph => {
+                if (paragraph.textContent.length > maxCharacters) {
+                    paragraph.textContent = paragraph.textContent.substring(0, maxCharacters) + '...';
+                }
+            });
+        </script>
 
-<%- include('./partials/footer.ejs') %>
+        <%- include('./partials/footer.ejs') %>
