Modification de la vue d'un tableau

--- a/app/views/array.ejs
+++ b/app/views/array.ejs
@@ -32,7 +32,8 @@
     </header>
     <main>
 
-        <img class="oneArray" src="<%= oneArray.url_img %>" alt="toile personalisée">
+        <img class="oneArray" src="<%= oneArray[0].url_img %>" alt="toile personalisée">
+        <%= console.log(oneArray) %>
 
     </main>
     <footer>
