--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 </main>
 <footer>
-    Tout droit réservé à l'artiste
+    Tout droit réservé à l'<a id="artist" href="/robert">artiste</a>
 </footer>
 
 <script>
