--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -61,7 +61,7 @@
                                 <input type="text" id="firstname" name="firstname" required placeholder="Votre Prénom*">
                                 </div>
                                 <div class="form-group">
-                                <input type="text" id="email" name="email" required placeholder="Votre adresse mail*">
+                                <input type="text" id="mail" name="mail" required placeholder="Votre adresse mail*">
                                 </div>
                                 <div class="form-group">
                                 <textarea name="message" id="message" cols="100" rows="20" placeholder="Si vous préférez être rappeler. Merci de me laisser votre numéro de téléphone dans votre message"></textarea>
