Checkbox fait mais reste a corriger si une ou aucune checkbox selectionné

--- a/app/views/array.ejs
+++ b/app/views/array.ejs
@@ -33,13 +33,6 @@
     <main>
 
         <img class="oneArray" src="<%= oneArray[0].url_img %>" alt="toile personalisée">
-        <%= console.log(oneArray) %>
 
     </main>
-    <footer>
-        Tout droit réservé à l'artiste
-    </footer>
-
-</body>
-
-</html>
+    <%- include('./partials/footer.ejs') %>
