--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -241,3 +241,8 @@ object-fit: cover;
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+#artist {
+  text-decoration: none;
+  color: white;
+}
