Diverses modif avec ajout de bcrypt et session pour mettre en place une connexion

--- a/app/views/adminPage.ejs
+++ b/app/views/adminPage.ejs
@@ -32,6 +32,15 @@
     </header>
     <main>
 
+            <article class="login">
+                <form class="login" action="/signup" method="get">
+                    <input type="text" name="user" id="user" placeholder="Identifiant">
+                    <input type="text" name="password" id="password" placeholder="mot de passe">
+                    <button>connexion</button>
+                </form>
+            </article>
+
+
         <article>
             <div class="messages-for-artist">
                 <% messagesObject.forEach(message=> { %>
