mise en commentaire du formulaire d'inscription, car non necessaire

--- a/app/views/signup.ejs
+++ b/app/views/signup.ejs
@@ -37,11 +37,11 @@
                     <label for="username">Nom d'utilisateur:</label>
                     <input type="text" id="username" name="username" required>
             
-                    <label for="first-password">Mot de passe:</label>
-                    <input type="password" id="first-password" name="first-password" required>
+                    <label for="firstPassword">Mot de passe:</label>
+                    <input type="password" id="firstPassword" name="firstPassword" required>
             
                     <label for="confirmPassword">Confirmer le mot de passe:</label>
-                    <input type="password" id="confirmPassword" name="confirm-Password" required>
+                    <input type="password" id="confirmPassword" name="confirmPassword" required>
             
                     <button type="submit">S'inscrire</button>
                 
