--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -246,3 +246,19 @@ width: 100%;
   text-decoration: none;
   color: white;
 }
+
+.login {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.login-form {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+
+.login-form button {
+  width: 30%;
+}
