--- a/app/views/adminPage.ejs
+++ b/app/views/adminPage.ejs
@@ -9,7 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Ephesis&family=Skranji:wght@400;700&display=swap"
         rel="stylesheet">
-    <script src="../../utils.js"></script>
+    <script src="../utils.js"></script>
 
 
 
@@ -24,18 +24,16 @@
                     <a href="/"><button class="btn-admin">Accueil</button></a>
                     <button class="btn-admin">Ajouter un tableau</button>
                     <button class="btn-admin">Tous les messages</button>
-                    <form method="post" action="/robert/delete">
-                    <a href="/robert/delete"><button class="btn-admin" type="button">Supprimer la séléction</button></a>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-
-          <article class="login">
-                <form method="post" action="/login">
-                    <label for="name">Nom d'utilisateur:</label>
-                    <input type="text" id="name" name="name" required>
+        <% if (user === null || typeof user === 'undefined') { %>
+          <article class="login" >
+                <form class="login-form" method="post" action="/login">
+                    <label for="adminName">Nom d'utilisateur:</label>
+                    <input type="text" id="adminName" name="adminName" required>
                 
                     <label for="password">Mot de passe:</label>
                     <input type="password" id="password" name="password" required>
@@ -43,37 +41,47 @@
                     <button type="submit">Connexion</button>
                   </form>
             </article>
+            <% }else { %>
+                <p>Bienvenue Patricia </p> <a href="/logout">
+                    <p>déconnexion</p>
+                </a>
+                <% } %>
 
-
-        <article>
-            <div class="messages-for-artist">
-                <% messagesObject.forEach(message=> { %>
-                    <div class="message-for-artist">
-                        <div class="message-left">
-                            <input type="checkbox" name="selectedMessages" value="<%= message.id %>">
-                            <p>
-                                <%= message.firstname %>:
-                            </p>
-                            <a href="#">
-                                <p class="restricted-paragraph">
-                                    <%= message.message %>
-                                </p>
-                            </a>
+            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
+                     
+                <article>
+                    <div class="messages-for-artist">
+                        <% messagesObject.forEach(message=> { %>
+                            <div class="message-for-artist">
+                                <div class="message-left">
+                                    <input type="checkbox" name="selectedMessages" value="<%= message.id %>">
+                                    <p>
+                                        <%= message.firstname %>:
+                                    </p>
+                                    <a href="#">
+                                        <p class="restricted-paragraph">
+                                            <%= message.message %>
+                                        </p>
+                                    </a>
+                                </div>
+                                <div class="message-right">
+                                    <a href="/robert/<%= message.id %>">
+                                        
+                                        <p class="delete-button">supprimer</p>
+                                    </a>
+                                </div>
+                            </div>
+                            <% }) %>
                         </div>
-                        <div class="message-right">
-                            <a href="/robert/<%= message.id %>">
-
-                                <p class="delete-button">supprimer</p>
-                            </a>
-                        </div>
-                    </div>
-
-                    <% }) %>
-            </div>
-        </article>
-    </form>
-        <script>
-            const paragraphs = document.querySelectorAll('.restricted-paragraph');
+                    </article>
+                    <% } else { %>
+                        <% if (typeof user === 'undefined') { %>
+                          <p>Vous devez être connecté en tant qu'administrateur pour voir cette page</p>
+                        <% } %>
+                      <% } %>
+                    
+                    <script>
+                        const paragraphs = document.querySelectorAll('.restricted-paragraph');
             const maxCharacters = 100;
 
             paragraphs.forEach(paragraph => {
