--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   font-family: 'ephesis', serif;
-  font-size: 2rem;
+  font-size: 1.8vw;
   background-color: rgba(141, 10, 10, 0.953);
   color: #ffffff;
   margin: 0% 12% 0% 12%;
@@ -10,7 +10,7 @@ body {
 
 h1 {
   padding-top: 2%;
-  font-size: 4rem;
+  font-size: 6vw;
   font-weight: bolder;
   text-shadow: 5px 1px 2px rgb(16, 3, 5);
 
@@ -44,25 +44,25 @@ a {
 }
 
 .btn-menu {
-  --clr-font-main: hsla(0 0% 20% / 100);
+  --clr-font-main: hsla(0, 0%, 20%, 1);
   --btn-bg-1: rgb(255, 97, 97);
   --btn-bg-2: rgb(61, 2, 2);
-  --btn-bg-color: hsla(360 100% 100% / 1);
-  --radii: 0.5em;
+  --btn-bg-color: hsla(360, 100%, 100%, 1);
+  --radii: 1vw; /* Utilisation d'une valeur relative pour le border-radius */
   cursor: pointer;
-  padding: 0.9em 1.4em;
-  min-width: 120px;
-  min-height: 44px;
-  font-size: var(--size, 1rem);
+  padding: 0.5vw; /* Utilisation d'unités relatives pour le padding */
+  min-width: 20%; /* Utilisation d'une valeur relative pour la largeur minimale */
+  min-height: 3vw; /* Utilisation d'une valeur relative pour la hauteur minimale */
+  font-size: 1vw; /* Utilisation d'une valeur relative pour la taille de la police */
   font-weight: 500;
   transition: 0.8s;
-  background-size: 280% auto;
+  background-size:  280% auto;
   background-image: linear-gradient(325deg, var(--btn-bg-2) 0%, var(--btn-bg-1) 55%, var(--btn-bg-2) 90%);
   border: none;
   border-radius: var(--radii);
   color: var(--btn-bg-color);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5), 0px 5px 5px -1px rgba(27, 1, 1, 0.25), inset 4px 4px 8px rgba(135, 16, 16, 0.5), inset -4px -4px 8px rgba(19, 95, 216, 0.35);
-}
+} 
 
 .btn-menu:hover {
   background-position: right top;
@@ -80,7 +80,7 @@ a {
 }
 
 h2 {
-  font-size: 4rem;
+  font-size: 4vw;
   font-weight: bolder;
   text-shadow: 5px 1px 2px rgb(16, 3, 5);
 }
@@ -97,7 +97,8 @@ article {
 
 
 .img__expo {
-  width: 35%;
+  /*pour le coté responsive*/
+  width: 25vw;
   /* Pour maintenir le ratio d'aspect */
   height: 35%;
   /* Pour éviter la déformation de l'image */
@@ -131,7 +132,7 @@ article {
 
 .allArray {
   flex: 1;
-  max-width: 20rem;
+  max-width: 20vw;
   box-sizing: border-box;
 }
 
@@ -142,17 +143,21 @@ form {
 
 .form-group input {
   margin: 0.5%;
-  width: 30%;
+  width: 30vw;
   border-radius: 0.375rem;
   border: 1px solid rgba(55, 65, 81, 1);
   outline: 0;
+}
+
+.form-group textarea {
+  width: 50vw;
 }
 
 #button {
   font-size: 18px;
   color: #e1e1e1;
   font-family: inherit;
-  font-weight: 800;
+  font-weight: 600vw;
   cursor: pointer;
   position: relative;
   border: none;
@@ -261,4 +266,19 @@ width: 100%;
 
 .login-form button {
   width: 30%;
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .navBar {
+    flex-direction: wrap; /* Passer à une disposition en colonne pour les petits écrans */
+    padding: 2%; /* Ajuster l'espacement pour les petits écrans */
+    margin: 1%; /* Ajuster la marge pour les petits écrans */
+  }
+
+  .navPosition {
+    top: 5px; /* Ajuster la position pour les petits écrans */
+    left: 10px; /* Ajuster la position pour les petits écrans */
+  }
 }
