--- a/app/views/partials/header.ejs
+++ b/app/views/partials/header.ejs
@@ -23,7 +23,7 @@
         <div class="navPosition">
              <nav>
                  <ul class="navBar">
-                     <a href="#accueil"><button class="btn-menu" onclick="redirectToHome()">Accueil</button></a>
+                     <a href="#accueil"><button class="btn-menu" onclick="redirectToHome()">Accueil</button></a> //
                      <a href="#tableaux"><button class="btn-menu">Tableaux</button></a>
                      <a href="#contact"><button class="btn-menu">Contactez-moi</button></a>
                  </ul>
