--- a/app/views/modal.ejs
+++ b/app/views/modal.ejs
@@ -4,7 +4,7 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <form action="/" method="update">
-            <textarea name="description" id="description" cols="100" rows="20"><%= actualDescription.description %></textarea>
+            <textarea name="description" id="description" cols="100" rows="20"><%= arrays.description %></textarea>
         </form>
     </div>
 </div>
