--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -268,7 +268,41 @@ width: 100%;
   width: 30%;
 }
 
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0,0,0,0.4);
+}
 
+/* Contenu de la modal */
+.modal-content {
+  background-color: #d20303;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* Bouton de fermeture de la modal */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 
 @media screen and (max-width: 768px) {
   .navBar {
