ajustement de la modal

--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -30,33 +30,34 @@
 
 
     <% for (let a = 0; a < arrays.length; a++) { %>
-        <% if (a % 2 === 0) { %>
-          <article id="tableaux" class="img-left">
-            <div class="littleArray">
-              <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" alt="toile personalisée"></a>
-            </div>
-            <div class="littleArray">
-              <p><%= arrays[a].description %></p>
-              <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
-                <button id="openModalBtn">Ouvrir la modification</button>
-              <% } %>
-            </div>
-          </article>
-          <% } else { %>
-            <article class="img-right">
-              <div class="littleArray">
-                <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" alt="toile personalisée"></a>
-              </div>
-              <div class="littleArray">
-                <p><%= arrays[a].description %></p>
-                <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
-                  <button id="openModalBtn">Ouvrir la modification</button>
-                  <% } %>
-                </div>
-              </article>
-              <% } %>
-              <% } %>
-              <!-- Inclure le template de modal -->
+      <% if (a % 2 === 0) { %>
+        <article id="tableaux" class="img-left">
+          <div class="littleArray">
+            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" alt="toile personalisée"></a>
+          </div>
+          <div class="littleArray">
+            <p><%= arrays[a].description %></p>
+            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
+              <button class="openModalBtn">Modifier</button>
+            <% } %>
+          </div>
+        </article>
+      <% } else { %>
+        <article class="img-right">
+          <div class="littleArray">
+            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" alt="toile personalisée"></a>
+          </div>
+          <div class="littleArray">
+            <p><%= arrays[a].description %></p>
+            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
+              <button class="openModalBtn">Modifier</button>
+            <% } %>
+          </div>
+        </article>
+      <% } %>
+    <% } %>
+    
+    <!-- Inclure le template de modal -->
     <%- include('modal.ejs') %>
                     <article>
                         <div class="form-container" id="contact">
