--- a/app/views/partials/footer.ejs
+++ b/app/views/partials/footer.ejs
@@ -19,25 +19,28 @@
 </script>
 
 <script>
-    // JavaScript pour manipuler la modal
-    const modal = document.getElementById('myModal');
-    const btn = document.getElementById('openModalBtn');
-    const span = document.getElementsByClassName('close')[0];
-
-    btn.onclick = function() {
-        modal.style.display = 'block';
-    }
-
-    span.onclick = function() {
+    document.addEventListener('DOMContentLoaded', function () {
+      const modal = document.getElementById('myModal');
+      const modalBtns = document.querySelectorAll('.openModalBtn');
+      const span = document.getElementsByClassName('close')[0];
+  
+      modalBtns.forEach(btn => {
+        btn.addEventListener('click', function () {
+          modal.style.display = 'block';
+        });
+      });
+  
+      span.onclick = function () {
         modal.style.display = 'none';
-    }
-
-    window.onclick = function(event) {
+      }
+  
+      window.onclick = function (event) {
         if (event.target === modal) {
-            modal.style.display = 'none';
+          modal.style.display = 'none';
         }
-    }
-</script>
+      }
+    });
+  </script>
 
 
 </body>
