--- a/app/integration/css/style.css
+++ b/app/integration/css/style.css
@@ -27,9 +27,7 @@ a {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  background-size: cover;
   background-position: center;
-  background-repeat: no-repeat;
   padding: 5%;
   margin: 2%;
   gap: 10px;
@@ -123,8 +121,9 @@ article {
 
 .littleArray {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   width: 100%;
   margin: 2%;
 }
@@ -192,9 +191,14 @@ form {
   transition-duration: 400ms;
   transition-property: width, left;
 }
-
+.content-oneArray{
+  height: 100vh;
+}
 .oneArray{
-width: 100%;
+
+max-width: 100%;
+max-height: 100%;
+
 
 /*object-fit: cover;*/
 }
@@ -306,13 +310,14 @@ width: 100%;
 
 @media screen and (max-width: 768px) {
   .navBar {
-    flex-direction: wrap; /* Passer à une disposition en ligne pour les petits écrans */
+    display: flex;
+    flex-direction: row ; /* Passer à une disposition en ligne pour les petits écrans */
+    justify-content: center;
     padding: 2%; /* Ajuster l'espacement pour les petits écrans */
     margin: 1%; /* Ajuster la marge pour les petits écrans */
   }
 
   .navPosition {
-    top: 5px; /* Ajuster la position pour les petits écrans */
-    left: 10px; /* Ajuster la position pour les petits écrans */
+    position: sticky;
   }
 }
