--- a/app/views/array.ejs
+++ b/app/views/array.ejs
@@ -31,8 +31,8 @@
         <h1 class="title">Les toiles de Patricia</h1>
     </header>
     <main>
-
+        <div class="content-oneArray">
         <img class="oneArray" src="<%= oneArray[0].url_img %>" alt="toile personalisée">
-
+        </div>
     </main>
     <%- include('./partials/footer.ejs') %>
