--- a/app/views/home.ejs
+++ b/app/views/home.ejs
@@ -33,24 +33,42 @@
       <% if (a % 2 === 0) { %>
         <article id="tableaux" class="img-left">
           <div class="littleArray">
-            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" alt="toile personalisée"></a>
+            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" alt="<%= arrays[a].description %>"></a>
           </div>
           <div class="littleArray">
+            <p><%= arrays[a].title %></p>
+            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
+              <button class="openModalBtnTitle">Modifier</button>
+            <% } %>
             <p><%= arrays[a].description %></p>
             <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
               <button class="openModalBtn">Modifier</button>
             <% } %>
+            <p>Prix: <%= arrays[a].price %> euros</p>
+            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
+              <button class="openModalBtnPrice">Modifier</button>
+            <% } %>
           </div>
         </article>
+
       <% } else { %>
+
         <article class="img-right">
           <div class="littleArray">
-            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" alt="toile personalisée"></a>
+            <a href="/tableau/<%= arrays[a].id %>"><img class="allArray" src="<%= arrays[a].url_img %>" alt="<%= arrays[a].description %>"></a>
           </div>
           <div class="littleArray">
+            <p><%= arrays[a].title %></p>
+            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
+              <button class="openModalBtnTitle">Modifier</button>
+            <% } %>
             <p><%= arrays[a].description %></p>
             <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
               <button class="openModalBtn">Modifier</button>
+            <% } %>
+            <p>Prix: <%= arrays[a].price %> euros</p>
+            <% if (user && user.name && user.name === process.env.NAME_ADMIN) { %>
+              <button class="openModalBtnPrice">Modifier</button>
             <% } %>
           </div>
         </article>
